подгонка под json